# handymann-cocpit

./: .env.example  .gitignore  .mcp.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  Claude-Code-Start.bat  GETTING_STARTED.md  Lokal AI ideer.txt  README.md  Start_once.bat  constraints-local.txt  pyproject.toml  reset_demo.bat  seed_demo.bat  seed_demo.py  start.bat  vision.md
.claude/: .gitignore  settings.json
migrations/: 001_ux_redesign_fields.sql  002_historical_offer_company_id.sql  2026-06-14-add-columns.sql  2026-06-15-invoice-case-source-inbox.sql
plans/: 2026-05-19-projekter-ressource.md  2026-05-20-company.md  2026-05-20-expense.md  2026-05-20-invoice.md  2026-05-20-tilbud-ressource.md  2026-05-20-time-entry.md  2026-05-21-bankafstemning.md  2026-05-21-ollama-lokal-ai-indbakke.md  2026-05-31-economic-customers.md  2026-06-05-ux-cradle-to-grave-redesign.md  2026-06-06-company-settings-contact-directory.md  2026-06-06-guided-intake-wizard.md  2026-06-09-company-scoped-email-ai-prompt-config.md  2026-06-14-kunde-intake-pipeline.md  2026-06-15-faktura-pipeline.md
tests/: conftest.py  test_action_items.py  test_admin_deadlines.py  test_appointments.py  test_bank_transactions_import.py  test_bank_transactions_list.py  test_calendar_suggestions.py  test_companies.py  test_companies_auth.py  test_company_config_models.py  test_company_email_ai_config.py  test_company_logo.py  test_company_prompts.py  test_customers.py  test_customers_address_history.py  test_customers_repeat_job.py  test_danish_csv.py  test_dashboard.py  test_economic_customers.py  test_email_poller.py  (+54 more)
(+166 files in other folders)
