[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "haandvaerker"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.110",
    "python-multipart>=0.0.9",
    "uvicorn>=0.29",
    "sqlmodel>=0.0.16",
    "alembic>=1.13",
    "python-dotenv>=1.0",
    "reportlab>=4.0",
    "pdfplumber>=0.11",
    "python-docx>=1.0",
    "openpyxl>=3.1",
    "pytesseract>=0.3",
    "Pillow>=10.0",
    "itsdangerous>=2.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "B", "S", "RUF"]
ignore = ["S101"]  # assert er OK i tests

[tool.mypy]
strict = true
python_version = "3.9"
